# Starfold

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: design_decisions.md  methodology.md  tutorial_01_quickstart.ipynb  tutorial_02_astronomy_example.ipynb  tutorial_02_validation.ipynb  tutorial_03_advanced.ipynb  tutorial_04_astronomy.ipynb
docs/data/: stellar_chemokinematics_apogee_dr19.parquet  stellar_chemokinematics_apogee_dr19.provenance.md
examples/: diagnostics.py  torus_chain.py
legacy/: starfold.ipynb
src/starfold/: __init__.py  _engine.py  _types.py  clustering.py  credibility.py  diagnostics.py  embedding.py  hierarchy.py  io.py  merge.py  noise_baseline.py  pipeline.py  plotting.py  silhouette.py  stability.py  trustworthiness.py  uncertainty.py
tests/: conftest.py  test_clustering.py  test_credibility.py  test_diagnostics.py  test_embedding.py  test_engine.py  test_hierarchy.py  test_io.py  test_merge.py  test_noise_baseline.py  test_pipeline.py  test_plotting.py  test_science_regression.py  test_silhouette.py  test_stability.py  test_trustworthiness.py  test_uncertainty.py
